--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 1200px;
   height: 500px;
   margin: 0 auto;
@@ -25,6 +26,7 @@
 	border-collapse:collapse;
 	border-spacing:0;
 	height: auto;
+  margin: 10px auto;
 }
 
 .table,.table td, .table th {
@@ -42,4 +44,11 @@
 	background: #347c99; 
 	color: #fff; 
 	font-weight: normal;
+}
+
+.entering-currency {
+  width: 200px;
+  height: 50px;
+  padding-left: 10px;
+  border: 1px solid chartreuse;
 }
