--- a/style.css
+++ b/style.css
@@ -49,6 +49,13 @@
 .entering-currency {
   width: 200px;
   height: 50px;
+  padding: 0px 10px;
+  border: 1px solid chartreuse;
+}
+
+.input-date {
+  width: 200px;
+  height: 50px;
   padding-left: 10px;
   border: 1px solid chartreuse;
 }
