--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
   margin: 0;
   padding: 0;
   border: 0;
+  background: whitesmoke;
 }
 
 .main {
   width: 100%;
-  height: 500px;
+  height: 100%;
   margin: 0 auto;
-  background: gray;
 }
 .wrapper {
   display: flex;
@@ -16,9 +16,8 @@
   align-items: center;
   flex-direction: column;
   width: 1200px;
-  height: 500px;
-  margin: 0 auto;
-  background: whitesmoke;
+  height: 100%;
+  margin: 100px auto;
 }
 
 .table{
@@ -58,4 +57,8 @@
   height: 50px;
   padding-left: 10px;
   border: 1px solid chartreuse;
+}
+
+.input-date:hover {
+  cursor: pointer;
 }
